# casco_bay_ferries

./: .pre-commit-config.yaml  CLAUDE.md  pyproject.toml  schedule.yaml
src/cb_schedule/: __init__.py  logging_config.py  publish.py  render_day.py
src/cb_schedule/services/: publish.py  render_day.py
src/cb_schedule/services/cbl/: scrape_schedule.py
src/cb_schedule/services/ctc/: parse_schedule_image.py
src/cb_schedule/templates/: day.html
templates/: home.html  styles.css
test/services/cbl/: __init__.py  test_scrape_schedule.py
test/services/cbl/data/: cbl_fall_schedule_2025.html  cbl_summer_schedule_2025.html
test/services/ctc/: test_parse_schedule_image.py
test/services/ctc/data/: ctc_summer_schedule.csv
