[project]
name = "cb-schedule"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "img2table[paddle]>=1.4.2",
    "jinja2>=3.1.6",
    "opencv-python>=4.12.0.88",
    "paddleocr>=3.2.0",
    "paddlepaddle>=3.1.1",
    "pdfplumber>=0.11.7",
    "pillow>=11.3.0",
    "pytesseract>=0.3.13",
    "rich>=14.1.0",
    "tomli>=2.2.1",
]

[project.scripts]
ctc-schedule = "cb_schedule.services.ctc.parse_crew_assistance_schedule_pdf:main"
ctc-schedule-image = "cb_schedule.services.ctc.parse_schedule_image:main"
ctc-schedule-ocr = "cb_schedule.services.ctc.parse_schedule_image_ocr:main"
ctc-schedule-img2table = "cb_schedule.services.ctc.parse_schedule_img2table:main"
ctc-print-table = "cb_schedule.services.ctc.print_table_raw:main"
ctc-parse-schedule = "cb_schedule.services.ctc.parse_schedule_final:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
]
